[build-system]
requires = ["hatchling", "altair"]
build-backend = "hatchling.build"

[project]
name = "kai_theme"
version = "0.0.4"
authors = [
  { name="Kai Aragaki", email="kaiaragaki@proton.me"},
]
description = "Kaimeleon for python plots"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
